fixed strange spacing

--- a/MainStyle.css
+++ b/MainStyle.css
@@ -88,7 +88,7 @@ body{
 
 .imageContainer{
     visibility:visible;
-    display: flex;
+    display: none;
     flex-direction: row;
     flex-wrap: wrap;
 
